added bootstrap and customizations

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,4 @@
-<h1>Fuck Yo Couch!</h1>
-<p>Sign up <%= link_to "here", "http://google.com"%>!</p>
+<div class="jumbotron">
+	<h1>Fuck Yo Couch!</h1>
+	<p>Click here to <%= link_to "join the club", "http://google.com", class: "btn btn-primary" %>!</p>
+</div>
