customized fonts and colors

--- a/app/views/pages/blaze.html.erb
+++ b/app/views/pages/blaze.html.erb
@@ -1,2 +1,6 @@
-<h1>Let's Blaze</h1>
-<p>I need to meditate</p>
+<div class="well center">
+	<h1>Let's Blaze</h1>
+    <p>I need to meditate</p>
+</div>
+
+
