--- a/app/views/pages/zazz.html.erb
+++ b/app/views/pages/zazz.html.erb
@@ -1,2 +1,4 @@
-<h1>Zazz on yo face!!!!!</h1>
-<p>ALL OVA YO FACE!!!!!!</p>
+<div class="well center">
+	<h1>Zazz on yo face!!!!!</h1>
+	<p>ALL OVA YO FACE!!!!!!</p>
+</div>
