--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,7 +1,22 @@
-$body-bg:     #34495e;
+@import url(http://fonts.googleapis.com/css?family=Lato:400,700);
 
+$font-famil-sans-serif:   'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$body-bg:     #34495e;
+$navbar-height:    45px;
+$navbar-default-link-color:    black;
 $navbar-default-bg:  #7f8c8d;
-$navbar-default-link-color:    white;
 $jumbotron-bg:    #7f8c8d;
+$panel-bg:   #7f8c8d;
+$well-bg:  #7f8c8d;
+$brand-primary:  #16a085;
+
+
+.center {
+	text-align:  center;
+}
+
+.navbar-brand {
+	font-weight:  bold;
+}
 
 @import 'bootstrap';
