--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,7 @@
-<div class="jumbotron">
+<div class="jumbotron center">
 	<h1>Fuck Yo Couch!</h1>
-	<p>Click here to <%= link_to "join the club", "http://google.com", class: "btn btn-primary" %>!</p>
+	<p>
+		<%= link_to "member login", "http://google.com", class: "btn btn-primary" %>
+		<%= link_to "join the club", "http://google.com", class: "btn btn-primary" %>
+	</p>
 </div>
