changed page text colors

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -19,4 +19,12 @@ $brand-primary:  #16a085;
 	font-weight:  bold;
 }
 
+.green {
+	color:  green;
+}
+
+.red {
+	color:   red;
+}
+
 @import 'bootstrap';
