--- a/app/views/pages/blaze.html.erb
+++ b/app/views/pages/blaze.html.erb
@@ -1,6 +1,5 @@
-<div class="well center">
+<div class="well center green">
 	<h1>Let's Blaze</h1>
-    <p>I need to meditate</p>
+	<p>I need to meditate</p>
 </div>
-
 
