--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,6 +18,11 @@
         <li><%= link_to "about", about_path %></li>
         <li><%= link_to "zazz", zazz_path %></li>
         <li><%= link_to "blaze", blaze_path %></li>
+        <% if user_signed_in? %>
+          <li><%= link_to "log out", destroy_user_session_path, method: :delete %></li>
+        <% else %>
+          <li><%= link_to "log in", new_user_session_path %></li>
+        <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div>    
