--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,31 @@
-<h2>Sign up</h2>
+<div class="panel panel-default">	
+	<div class="panel-heading, #7f8c8d, center">
+		<h2>You been pimpin since been pimpin since been pimpin?</h2>
+	</div>
+	<div class="panel-body">
+		<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+		  <%= devise_error_messages! %>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+		  <div class="form-group">
+		  	<%= f.label :email %>
+		  	<%= f.email_field :email, :autofocus => true, class: "form-control" %>
+		  </div>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+		  <div class="form-group">
+		  	<%= f.label :password %>
+		  	<%= f.password_field :password, class: "form-control" %>
+		  </div>
 
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
+		  <div class="form-group">
+		  	<%= f.label :password_confirmation %>
+		  	<%= f.password_field :password_confirmation, class: "form-control"  %>
+		  </div>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
+		  <div class="panel-footer, #7f8c8d, center">
+		  	<div><%= f.submit "Join the Club", class: "btn-lg btn-primary" %></div>
+		  </div>
+		<% end %>
+	</div>
+	
 
-  <div><%= f.submit "Sign up" %></div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
