--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,6 +20,7 @@
         <li><%= link_to "blaze", blaze_path %></li>
         <% if user_signed_in? %>
           <li><%= link_to "log out", destroy_user_session_path, method: :delete %></li>
+          <li><%= link_to "account settings", edit_user_registration_path %></li>
         <% else %>
           <li><%= link_to "log in", new_user_session_path %></li>
         <% end %>
