--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,6 +14,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
+        <li><%= link_to "pimps", pimps_path %></li>
         <li><%= link_to "home", root_path %></li>
         <li><%= link_to "about", about_path %></li>
         <li><%= link_to "zazz", zazz_path %></li>
