add image upload with paperclip

--- a/app/views/pimps/_form.html.erb
+++ b/app/views/pimps/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@pimp) do |f| %>
+<%= form_for @pimp, html: { multipart: true } do |f| %>
   <% if @pimp.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@pimp.errors.count, "error") %> prohibited this pimp from being saved:</h2>
@@ -11,6 +11,10 @@
     </div>
   <% end %>
 
+  <div class="form-group">
+    <%= f.label :image %>
+    <%= f.file_field :image, class: "form-control" %>
+  </div>
   <div class="form-group">
     <%= f.label :description %>
     <%= f.text_field :description, class: "form-control" %>
