added jquery masonry

--- a/app/views/pimps/index.html.erb
+++ b/app/views/pimps/index.html.erb
@@ -1,35 +1,20 @@
-<h1>Listing pimps</h1>
+<div id="pimps" class="transitions-enabled">
+  <% @pimps.each do |pimp| %>
+    <div class="box panel panel-default">
+      <%= image_tag pimp.image.url(:medium) %>
+      <div class="panel-body">
+        <%= pimp.description %>
+        <%= pimp.user_id %>
+        <%= pimp.user.email if pimp.user %>
+        <%= link_to 'Show', pimp %>
+        <% if pimp.user == current_user %>
+            <%= link_to 'Edit', edit_pimp_path(pimp) %>
+            <%= link_to 'Destroy', pimp, method: :delete, data: { confirm: 'Are you sure?' } %>
+        <% end %>
+      </div>  
+    </div>
+  <% end %>
+</div>  
 
-<table>
-  <thead>
-    <tr>
-      <th>Image</th>
-      <th>Description</th>
-      <th>Pimp ID</th>
-      <th>Pimp Email</th>
-      <th></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @pimps.each do |pimp| %>
-      <tr>
-        <td><%= image_tag pimp.image.url(:medium) %></td>
-        <td><%= pimp.description %></td>
-        <td><%= pimp.user_id %></td>
-        <td><%= pimp.user.email if pimp.user %></td>
-        <td><%= link_to 'Show', pimp %></td>
-          <% if pimp.user == current_user %>
-            <td><%= link_to 'Edit', edit_pimp_path(pimp) %></td>
-            <td><%= link_to 'Destroy', pimp, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-          <% end %>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
 
-<br>
-
-<% if user_signed_in? %>
-  <%= link_to 'New Pimp', new_pimp_path %>
-<% end %>
