--- a/app/views/pimps/show.html.erb
+++ b/app/views/pimps/show.html.erb
@@ -1,12 +1,20 @@
-<%= image_tag @pimp.image.url(:medium) %>
 
-<p>
-  <strong>Description:</strong>
-  <%= @pimp.description %>
-</p>
 
-<% if @pimp.user == current_user %>
-	<%= link_to 'Edit', edit_pimp_path(@pimp) %> |
-<% end %>
+<div class="row">
+	<div class="col-md-offset-2 col-md-8">
+		<div class="panel panel-default">
+			<div class="panel-heading center">
+				<%= image_tag @pimp.image.url(:medium) %>
+			</div>	
+			<div class="panel-body">
+				<p><%= @pimp.description %></p>	
+				<p><strong><%= @pimp.user.email if @pimp.user %></strong></p>
 
-	<%= link_to 'Back', pimps_path %>
+				<% if @pimp.user == current_user %>
+					<%= link_to 'Edit', edit_pimp_path(@pimp) %> |
+					<%= link_to 'Back', pimps_path %>
+				<% end %>
+			</div>
+		</div>	
+	</div>
+</div>	
