--- a/app/views/pimps/index.html.erb
+++ b/app/views/pimps/index.html.erb
@@ -2,13 +2,20 @@
   <% @pimps.each do |pimp| %>
     <div class="box panel panel-default">
       <%= link_to image_tag(pimp.image.url(:medium)), pimp %>
-      <div class="panel-body">
+      <div class="panel-body center">
         <%= pimp.description %><br/>
         <strong><%= pimp.user.email if pimp.user %></strong>
           <% if pimp.user == current_user %>
-            <div class="actions">
-              <%= link_to 'Edit', edit_pimp_path(pimp) %>
-              <%= link_to 'Destroy', pimp, method: :delete, data: { confirm: 'Are you sure?' } %>
+            <div class="actions center">
+              <%= link_to edit_pimp_path(pimp) do %>
+                <span class="glyphicon glyphicon-cog"></span>
+                edit
+              <% end %>
+
+              <%= link_to pimp, method: :delete, data: { confirm: 'Are you sure?' } do %>
+                <span class="glyphicon glyphicon-trash"></span>
+                delete
+              <% end %>
             <% end %>
         </div>
       </div>  
