--- a/app/views/pimps/index.html.erb
+++ b/app/views/pimps/index.html.erb
@@ -1,3 +1,5 @@
+<%= render 'pages/home' unless user_signed_in? %>
+
 <div id="pimps" class="transitions-enabled">
   <% @pimps.each do |pimp| %>
     <div class="box panel panel-default">
