added pagination to index page

--- a/app/views/pages/_home.html.erb
+++ b/app/views/pages/_home.html.erb
@@ -1,9 +1,8 @@
 <div class="jumbotron center">
-	<h1>Fuck Yo Couch!</h1>
+	<h1>The Official Pimp Forum</h1>
 	
 		<p>
-			<%= link_to "member login", new_user_session_path, class: "btn btn-primary" %>
-			<%= link_to "join the club", new_user_registration_path, class: "btn btn-primary" %>
+			<%= link_to "get down with this", new_user_registration_path, class: "btn btn-primary" %>
 		</p>
 	
 </div>
