--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,25 +5,31 @@
 	<div class="panel-body">
 		<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
 		  <%= devise_error_messages! %>
+	
+			  <div class="form-group">
+			  	<%= f.label :name %>
+			  	<%= f.text_field :name, :autofocus => true, class: "form-control" %>
+			  </div>
 
-		  <div class="form-group">
-		  	<%= f.label :email %>
-		  	<%= f.email_field :email, :autofocus => true, class: "form-control" %>
-		  </div>
+			  <div class="form-group">
+			  	<%= f.label :email %>
+			  	<%= f.email_field :email, :autofocus => true, class: "form-control" %>
+			  </div>
 
-		  <div class="form-group">
-		  	<%= f.label :password %>
-		  	<%= f.password_field :password, class: "form-control" %>
-		  </div>
+			  <div class="form-group">
+			  	<%= f.label :password %>
+			  	<%= f.password_field :password, class: "form-control" %>
+			  </div>
 
-		  <div class="form-group">
-		  	<%= f.label :password_confirmation %>
-		  	<%= f.password_field :password_confirmation, class: "form-control"  %>
-		  </div>
+			  <div class="form-group">
+			  	<%= f.label :password_confirmation %>
+			  	<%= f.password_field :password_confirmation, class: "form-control"  %>
+			  </div>
 
-		  <div class="panel-footer, #7f8c8d, center">
-		  	<div><%= f.submit "Join the Club", class: "btn-lg btn-primary" %></div>
-		  </div>
+			  <div class="panel-footer, #7f8c8d, center">
+			  	<div><%= f.submit "Join the Club", class: "btn-lg btn-primary" %></div>
+			  </div>
+			  
 		<% end %>
 	</div>
 </div>
